--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
     "description": "A simple Node.js application that fetches data from a public API and displays it.",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js",
+        "build": "babel src/server.js --out-file dist/server.js"
     },
     "dependencies": {
-      "axios": "^0.21.1",
-      "express": "^4.17.1"
+        "axios": "^0.21.1",
+        "express": "^4.17.1"
     },
     "author": "Apenteng Joseph",
-    "license": "ISC"
-  }
-  
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/cli": "^7.24.7",
+        "@babel/core": "^7.24.7",
+        "@babel/preset-env": "^7.24.7"
+    }
+}
